# Alchemist

./: .gitignore  README.md  detection_worker.py  export_dashboard.py  lp_batch.sh  main.py  nas_batch.sh  nas_worker.py  pyproject.toml  train_worker.py  video_worker.py  vit_batch_v2.sh  vlm_worker.py
alchemist/: __init__.py  harness.py
alchemist/agents/: __init__.py  benchmark.py  controller.py  protocol.py  research.py
alchemist/core/: __init__.py  arch_modifier.py  c_abstractor.py  executor.py  experience_store.py  llm.py  model_loader.py  schemas.py  task_registry.py  utils.py  vjepa_loader.py
alchemist/core/retrievers/: __init__.py  arxiv.py  github.py  hf_hub.py
baselines/: amla_plan_to_alchemist.py  auto_chain_all.sh  auto_chain_launch.sh  claude_cli_proxy.py  prepare_coco.sh  prepare_datasets.sh  prepare_ucf101.sh  remote_execute_ec2.py  run_alchemist_all.sh  run_alchemist_butterfly.sh  run_alchemist_cifar100.sh  run_alchemist_shopee.sh  run_alchemist_ucf101.sh  run_amla_butterfly.py  run_amla_cifar100.py  run_amla_coco_detection.py  run_amla_shopee.py  run_coco_comparison.sh
docs/: DEV_REPORT.md  FIGURE_CAPTIONS.md  FIGURE_PROMPT.md  PAPER_OUTLINE.md  PDR.md  RELATED_WORK_AUTOML_AGENT.md  TDD.md
tests/: test_agents.py  test_edge_cases.py  test_harness.py  test_protocol.py
